Alrighty, several tweaks here. The Art section, on the homepage listing some of the websites features is working, as is the list of icons and a brief decription allowing users to understand what they mean and will provide them as links in future across the site alongside the nav bar and the hamburger menu. with playing around with flexbox stuff managed to get it to be responsive to mobile and desktop mode for the icons and the art display, so they will fill up the screen on a phone rather than be two seperate and very tiny components on mobile. gotta keep things responsive as i built outwards otherwise as the css and stuff grows, ill be fighting a snowball effect of bugs. Home page is wrapping up nicely, not to amazing i admit, but a vast improvement on previous websites i have made. Tablet mode is somthing i might need to work on at some point, given a rotated phone (in my experience) pulls up a similar scaling experience. Im looking forward to blowing out the rest of the site with info, and making it look less like the wall of a somewhat fancy public bathroom!

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,6 +67,47 @@ html {
   border-radius: 40% 40%;
 }
 
+.imgicons {
+  display: flex;
+  flex: wrap;
+  width: 150px;
+  height: 100px;
+  margin: 5% 0% 5% -10%;
+  border: rgb(255, 0, 0);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 40% 40%;
+}
+
+.icontext {
+  display: flex;
+  flex: wrap;
+  width: 100%;
+  padding: 0%;
+  text-align: left;
+  font-size: 1.5rem;
+  // margin: 0% 0% 0% 1%;
+  // font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: bold;
+}
+.iconsection {
+  margin: 0%;
+  background-color: rgb(255, 255, 255);
+  border: rgba(
+    78,
+    78,
+    78,
+    0.452
+  ); //borders are for the purpose of building and development, showing where the component is.
+  border-style: solid;
+  border-width: 1px;
+  display: flex;
+  flex: wrap;
+  p {
+    margin: 1%;
+    padding: 2.5%;
+  }
+}
 .section {
   margin: 1%;
   background-color: rgb(255, 255, 255);
@@ -88,7 +129,7 @@ html {
   background-image: url("images/white.png");
   background-repeat: repeat;
 
-  p {
+  #p1 {
     margin: 5%;
     background: rgb(243, 243, 243);
     border: #000000;
@@ -117,16 +158,6 @@ html {
   }
 }
 
-// .sectionquater {
-//   display: flex;
-//   flex: wrap;
-//   margin: 1%;
-//   background-color: rgb(255, 255, 255);
-//   border: black; //borders are for the purpose of building and development, showing where the component is.
-//   border-style: solid;
-//   border-width: 1px;
-//   width: 100%;
-// }
 .sectiontext {
   padding: 1% 5% 1% 5%;
   text-align: left;
@@ -404,5 +435,19 @@ h3 {
 
   .sectiontext {
     font-size: 1rem;
+  }
+  .section {
+    display: flex;
+    flex-flow: column;
+  }
+  .sectionhalf {
+    width: 100%;
+  }
+  .icontext {
+    font-size: 1rem;
+  }
+  .imgicons {
+    width: 100px;
+    height: auto;
   }
 }
